[package]
name = "lang-pie"
version = "0.1.0"
edition = "2024"

[dependencies]
hickory-resolver = "0.24.4"
piechart = "1.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.44.0", features = ["rt"]}
url = "2.5.4"
