[package]
name = "lang-pie"
version = "1.0.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
keyring = { version = "3.6.2", features = ["sync-secret-service", "linux-native", "crypto-rust", "apple-native", "windows-native", "linux-native-sync-persistent"] }
piechart = "1.0.0"
portify = "1.0.0"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.44.0", features = ["rt"]}
url = "2.5.4"
whoami = "1.6.0"
